# Arduino-CMake

./: CMakeLists.txt  README.md  upload.sh
cores/: CMakeLists.txt
libraries/: CMakeLists.txt
src/: main.cpp
